--- a/src/app/principal/principal.component.html
+++ b/src/app/principal/principal.component.html
@@ -1,2 +1,13 @@
-<div><h1 class="text-center">Roberto Alcocer</h1></div>
-<div><h1 class="text-center">Ingeniero en Mecatronica</h1></div>
+<style>
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    margin: 8px 10px;
+  }
+</style>
+
+<div class="text-center"><h1 >Roberto Alcocer</h1></div>
+<div class="text-center"><h1 >Ingeniero en Mecatronica</h1></div>
