--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -422,6 +422,11 @@
       <svg class="material-icons" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"/></svg>
       <span>Build for Production</span>
     </button>
+    
+    <button class="card card-small" [routerLink]="['/principal']" (click)="selection.value = 'build'" tabindex="0">
+      <svg class="material-icons" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"/></svg>
+      <span >Main Page Pech</span>
+    </button>
   </div>
 
   <!-- Terminal -->
@@ -432,6 +437,7 @@
       <pre *ngSwitchCase="'dependency'">ng add _____</pre>
       <pre *ngSwitchCase="'test'">ng test</pre>
       <pre *ngSwitchCase="'build'">ng build</pre>
+      <pre *ngSwitchCase="'build'">ng Pech</pre>
   </div>
 
   <!-- Links -->
