--- a/src/app/principal/principal.component.html
+++ b/src/app/principal/principal.component.html
@@ -1,4 +1,4 @@
 
 
-<div class="text-center"><h1 >Roberto Alcocer</h1></div>
+<div class="container text-center"><h1 >Roberto Alcocer</h1></div>
 <div class="text-center"><h1 >Ingeniero en Mecatronica</h1></div>
