--- a/src/app/principal/principal.component.html
+++ b/src/app/principal/principal.component.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
- 
 <html>
-    <div class="container text-center"><h1 >Roberto Alcocer</h1></div>
-    <div class="text-center"><h1 >Ingeniero en Mecatronica</h1></div>
+    <body>
+        <div class="container text-left"><h1>Roberto Alcocer Pech</h1></div>
+        <div class="text-center"><h1 >Ingeniero en Mecatronica</h1></div>
+    </body>
 </html>
 
