--- a/src/app/principal/principal.component.html
+++ b/src/app/principal/principal.component.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <div class="container text-left"><h1>Roberto Alcocer Pech</h1></div>
+        <div class="text-center"><h1>Roberto Alcocer Pech</h1></div>
         <div class="text-center"><h1 >Ingeniero en Mecatronica</h1></div>
     </body>
 </html>
