--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
-<div class="text-center">
-    <button>
-        Hola Pech
-    </button>
-</div>
+<nav class="navbar navbar-expand-lg navbar-right bg-light">
+  <ul>
+    <li routerLink="portafolio">Portafolio</li>
+  </ul>
+  <ul>
+    <li routerLink="skills">Skills</li>
+  </ul>
+  <ul>
+    <li routerLink="experience">Experience</li>
+  </ul>
+</nav>
 <router-outlet></router-outlet>
