--- a/src/app/principal/principal.component.html
+++ b/src/app/principal/principal.component.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
-    <body>
+    <body class="container">
         <div class="text-center"><h1>Roberto Alcocer Pech</h1></div>
-        <div class="text-center"><h1 >Ingeniero en Mecatronica</h1></div>
+        <div class="text-center">
+            <h1 >Ingeniero en Mecatronica</h1>
+            <p>Este es mi apellido</p>
+        </div>
     </body>
 </html>
 
